--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.338.0",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "pg": "^8.10.0"
   },
   "devDependencies": {
